integration-tests/tests/errors/views/unhandled-rejection-inline.ejs
<!DOCTYPE html>
<html lang="en">
<head>
	<meta charset="UTF-8">
	<title>Errors test</title>
  <%- renderInlineAgent() %>
  <script id="scenario">
    setTimeout(function() {
      Promise.reject('rejection-value');
    });
  </script>
</head>
<body>
  <h1>Unhandled rejection</h1>

  <!-- saturate sockets to ensure that promise rejects before agent loads -->
  <img src="/utils/devServer/assets/splunk-black.png?buster=1" />
  <img src="/utils/devServer/assets/splunk-black.png?buster=2" />
  <img src="/utils/devServer/assets/splunk-black.png?buster=3" />
  <img src="/utils/devServer/assets/splunk-black.png?buster=4" />
  <img src="/utils/devServer/assets/splunk-black.png?buster=5" />
  <img src="/utils/devServer/assets/splunk-black.png?buster=6" />

  <%- renderAgent({}) %>
</body>
</html>
